Fixed grep star being unescaped in CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
           echo $'{ "extends": "../../tsconfig.base.json", "compilerOptions": { "tsBuildInfoFile":"../../lib/common/compile.tsbuildInfo", "rootDir": ".", "outDir": "../../lib/common", "composite": true }, "include": [ "." ], "exclude": [ "test" ] }' > vendor/vscode-languageserver-node/jsonrpc/src/common/tsconfig.json
 
           npm install typescript-json-schema -g
-          typescript-json-schema vendor/vscode-languageserver-node/protocol/src/common/tsconfig.json * --required --aliasRefs > src/schema.json
+          typescript-json-schema vendor/vscode-languageserver-node/protocol/src/common/tsconfig.json \* --required --aliasRefs > src/schema.json
           
           zig build run
           zig fmt lsp.zig
