Only upload bindings
This allows us to obtain the bindings as a single file rather than archive.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,10 +52,9 @@ jobs:
           zig fmt lsp.zig
           
           mv lsp.zig artifacts/lsp.zig
-          mv src/schema.json artifacts/schema.json
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: builds
-          path: artifacts/*
+          name: lsp.zig
+          path: artifacts/lsp.zig
