--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,9 +52,10 @@ jobs:
           zig fmt lsp.zig
           
           mv lsp.zig artifacts/lsp.zig
+          mv src/schema.json artifacts/schema.json
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: lsp.zig
-          path: artifacts/lsp.zig
+          name: builds
+          path: artifacts/*
